--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{9FF0FDD2-8D88-5CB4-C521-15D4FBE8E0FF}</ProjectGuid>
+    <ProjectGuid>{34467AA8-DCBB-B786-2DE7-70905B7AEE8C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -57,18 +57,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Weapon\Weapon.cs" />
+    <Compile Include="Assets\Script\Player\PlayerInfomation.cs" />
     <Compile Include="Assets\Script\Player\PlayerHealthPoint.cs" />
     <Compile Include="Assets\Script\Player\MainCharacterScript.cs" />
     <Compile Include="Assets\Script\GameManager.cs" />
     <Compile Include="Assets\Script\Player\PlayerAttack.cs" />
+    <Compile Include="Assets\Script\ButtonScript.cs" />
     <Compile Include="Assets\Script\Player\PlayerMove.cs" />
     <Compile Include="Assets\Script\Monster\MonsterPooling.cs" />
     <Compile Include="Assets\Script\UIManager.cs" />
     <Compile Include="Assets\Script\Monster\Monster.cs" />
     <Compile Include="Assets\Script\Weapon\LightingBolt.cs" />
     <Compile Include="Assets\Script\Monster\MonsterUIController.cs" />
-    <Compile Include="Assets\Script\Player\PlayerInfomation.cs" />
-    <Compile Include="Assets\Script\ButtonScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -77,6 +77,7 @@
     <None Include="Assets\Resource\Font\monogram\credits.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\Resource-main\Resource-main\Font\monogram\credits.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
